Correction of an order problem in the background z-index

--- a/src/components/bubbles/bubble/bubble.css
+++ b/src/components/bubbles/bubble/bubble.css
@@ -19,7 +19,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 99999999999;
+    z-index: 999;
     /* backdrop-filter: blur(8px); */
 }
 
