--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -8,7 +8,7 @@ a {
     display: flex;
     height: 100vh;
     width: 100%;
-    z-index: 999;
+    z-index: 9999;
 }
 
 .canvas {
